--- a/Accordian Displays (11)/STARTER-FILES/styles.css
+++ b/Accordian Displays (11)/STARTER-FILES/styles.css
@@ -86,6 +86,17 @@ a:hover .question:after {
   display: none;
 }
 
+.expand .question:after {
+  content: '';
+  background: #F0F0F0 url('./images/close.svg') calc(100% - 12px) 20px no-repeat;
+  width: calc(100%);
+  position: absolute;
+  right: -55px;
+  top: 15px;
+  height: calc(100% + 15px);
+  z-index: -1;
+}
+
 .expand .answer {
   display: block;
   background-color: #FFDD00;
