Rock paper scissors game functional

--- a/Rock-Paper-Scissors(12)/styles.css
+++ b/Rock-Paper-Scissors(12)/styles.css
@@ -103,3 +103,13 @@ body.winner img {
   background: black;
   color: white;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+body h2{
+  position: relative;
+  text-align: center;
+}
